fix: prevent user zoom on Safari

--- a/shared/styles/application.scss
+++ b/shared/styles/application.scss
@@ -47,6 +47,7 @@ body {
 }
 
 body {
+    touch-action: pan-x pan-y;
     background-color: #525252;
     &.dark {
         background-color: #525252;
